--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
 }
 
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +40,4 @@ s .logo:hover {
 
 .read-the-docs {
   color: #888;
-}
+} */
