--- a/src/Components/Layout/Navigation.module.css
+++ b/src/Components/Layout/Navigation.module.css
@@ -5,7 +5,7 @@
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
-  font-weight: 500;
+  /* font-weight: 500; */
   color: black;
   text-decoration: none;
   transition: background-color 0.2s ease, color 0.2s ease;
@@ -14,7 +14,7 @@
 .active {
   background-color: #3b82f6;
   color: white;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .navLink:not(.active):hover {
