--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-#root {
-  /* max-width: 1280px; */
-  /* margin: 0 auto; */
-  /* padding: 0.5rem; */
-  /* text-align: center; */
-}
+/* #root {
+  max-width: 1280px; 
+  margin: 0 auto;
+  padding: 0.5rem;
+   text-align: center; 
+} */
 
 /* 
 .logo {
